@@ -1,5 +1,8 @@
 2012-11-07  Roland McGrath  <mcgrathr@google.com>
 
+	* gold.h: Move inclusion of <clocale> to after <libintl.h> in
+	[ENABLE_NLS] section, and separately at top of [!ENABLE_NLS] section.
+
 	* descriptors.cc (set_close_on_exec): Add ATTRIBUTE_UNUSED to the
 	parameter, which is unused in the [!F_SETFD] case.
 
